# python-cli-samples

./: .gitignore  README.md  pyproject.toml
python_cli_samples/: __init__.py  __main__.py  _add_path.py  utils.py
python_cli_samples/tools/: __init__.py  __main__.py  _add_path.py  find_imgs.py  print_modules.py
python_cli_samples/tools/print/: __init__.py  __main__.py  _add_path.py  print_syspath.py
